--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
   <h1>Hello World! <br>My name is Anthony Gonzalez</h1>
+ 
+  <form>
+        <div>
+        <label for="username">Enter Your Username</label>
+        <input type="text" name="username" id="username" minlength="5" maxlength="15" required>
+        </div>
+        <div>
+        <label for="password">Enter Your Password</label>
+        <input type="password" name="password" id="password" minlength="8" maxlength="16" required>
+        </div>
+      </form>
+
   </body>
 </html>
