--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <label for="password">Enter Your Password</label>
         <input type="password" name="password" id="password" minlength="8" maxlength="16" required>
         </div>
+        <div>
+          <input type="submit">
+        </div>
       </form>
 
   </body>
