--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="style.css" type="text/css"   rel="stylesheet">
  <title>Hello World</title>
 </head>
 <body>
-  <h1>Hello World! <br>My name is Anthony Gonzalez</h1>
+ <div class="container">
+   <h1>Hello World! <br>My name is Anthony Gonzalez</h1>
  
   <form>
         <div>
@@ -19,6 +21,7 @@
         <input type="password" name="password" id="password" minlength="8" maxlength="16" required>
         </div>
       </form>
+ </div>
 
   </body>
 </html>
