--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <input type="submit">
         </div>
       </form>
+      <div class="grid">
+        <div class="a">A</div>
+        <div class="b">B</div>
+        <div class="c">C</div>
+        <div class="d">D</div>
+      </div>
  </div>
 
   </body>
